--- a/public/layout/header.html
+++ b/public/layout/header.html
@@ -12,13 +12,13 @@
         <li class="nav-item active">
           <a id="login" class="nav-link" href="./login.html">Login <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item active">
-            <a id="logout" class="nav-link">Logout <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
+          <li class="nav-item">
           <a id="signup" class="nav-link" href="./signup.html">Sign up</a>
         </li>
-        <li class="nav-item active">
+          <li class="nav-item">
+          <a id="home" class="nav-link" href="./">Home</a>
+        </li>
+          <li class="nav-item active">
           <a id="upload" class="nav-link" href="./upload.html">Upload serie</a>
         </li>
       </ul>
