project done details left

--- a/public/layout/header.html
+++ b/public/layout/header.html
@@ -19,8 +19,11 @@
           <a id="home" class="nav-link" href="./">Home</a>
         </li>
           <li class="nav-item active">
-          <a id="upload" class="nav-link" href="./upload.html">Upload serie</a>
+          <a id="upload" class="nav-link" href="./upload.html">Upload product</a>
         </li>
+        <li class="nav-item active">
+          <a id="cart" class="nav-link" href="./cart.html">Cart</a>
+      </li>
       </ul>
     </div>
 </nav>
