login & signup error

--- a/public/layout/header.html
+++ b/public/layout/header.html
@@ -23,7 +23,10 @@
         </li>
         <li class="nav-item active">
           <a id="cart" class="nav-link" href="./cart.html">Cart</a>
-      </li>
+        </li>
+        <li class="nav-item active">
+          <a id="logout" class="nav-link">Logout</a>
+        </li>
       </ul>
     </div>
 </nav>
