--- a/public/layout/header.html
+++ b/public/layout/header.html
@@ -8,22 +8,22 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a id="login" class="nav-link" href="./login.html">Login <span class="sr-only">(current)</span></a>
+          <a id="login" class="nav-link" href="./login.html" style="display:none">Login <span class="sr-only">(current)</span></a>
         </li>
           <li class="nav-item">
-          <a id="signup" class="nav-link" href="./signup.html">Sign up</a>
+          <a id="signup" class="nav-link" href="./signup.html" style="display:none">Sign up</a>
         </li>
           <li class="nav-item">
-          <a id="home" class="nav-link" href="./">Home</a>
+          <a id="home" class="nav-link" href="./" style="display:none">Home</a>
         </li>
           <li class="nav-item active">
-          <a id="upload" class="nav-link" href="./upload.html">Upload product</a>
+          <a id="upload" class="nav-link" href="./upload.html" style="display:none">Upload product</a>
         </li>
         <li class="nav-item active">
-          <a id="cart" class="nav-link" href="./cart.html">Cart</a>
+          <a id="cart" class="nav-link" href="./cart.html" style="display:none">Cart</a>
         </li>
         <li class="nav-item active">
-          <a id="logout" class="nav-link">Logout</a>
+          <a id="logout" class="nav-link" style="display:none">Logout</a>
         </li>
       </ul>
     </div>
