email almost done

--- a/public/layout/header.html
+++ b/public/layout/header.html
@@ -8,22 +8,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a id="login" class="nav-link" href="./login.html" style="display:none">Login <span class="sr-only">(current)</span></a>
+          <a id="login" class="nav-link" href="./login.html" style="display:none">Iniciar sesion <span class="sr-only">(current)</span></a>
         </li>
           <li class="nav-item">
-          <a id="signup" class="nav-link" href="./signup.html" style="display:none">Sign up</a>
-        </li>
-          <li class="nav-item">
-          <a id="home" class="nav-link" href="./" style="display:none">Home</a>
+          <a id="signup" class="nav-link" href="./signup.html" style="display:none">Registrate</a>
         </li>
           <li class="nav-item active">
-          <a id="upload" class="nav-link" href="./upload.html" style="display:none">Upload product</a>
+          <a id="upload" class="nav-link" href="./upload.html" style="display:none">Subir un producto</a>
+        </li>
+        <li class="nav-item">
+          <a id="cart" class="nav-link" href="./cart.html" style="display:none">Carro de compras</a>
         </li>
         <li class="nav-item active">
-          <a id="cart" class="nav-link" href="./cart.html" style="display:none">Cart</a>
-        </li>
-        <li class="nav-item active">
-          <a id="logout" class="nav-link" style="display:none">Logout</a>
+          <a id="logout" class="nav-link" style="display:none">Cerrar sesion</a>
         </li>
       </ul>
     </div>
