--- a/public/layout/header.html
+++ b/public/layout/header.html
@@ -20,6 +20,9 @@
           <a id="cart" class="nav-link" href="./cart.html" style="display:none">Carro de compras</a>
         </li>
         <li class="nav-item active">
+          <a id="order" class="nav-link" href="./order.html" style="display:none">Ver ordenes</a>
+        </li>
+        <li class="nav-item">
           <a id="logout" class="nav-link" style="display:none">Cerrar sesion</a>
         </li>
       </ul>
